# safaa

./: .gitignore  CHANGELOG.md  README.md  REUSE.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build-test.yml  code-quality.yml  fetch_train_deploy.yml  pipeline.yml  release-publish.yml  reuse-lint.yml  version-compatibility.yml
.reuse/: dep5
Safaa/: MANIFEST.in  pyproject.toml  setup.py
Safaa/src/safaa/: Safaa.py
Safaa/src/safaa/configs/: train.cfg
Safaa/src/safaa/models/: __init__.py  false_positive_detection_model_sgd.pkl  false_positive_detection_model_sgd.pkl.license  false_positive_detection_vectorizer.pkl
Safaa/src/safaa/models/declutter_model/: meta.json
Safaa/src/safaa/pipeline_dir/: data_split.py  declutter_script.py  extra_declutter.py  preprocessing_script.py  script_for_copyrights.py  utility_scripts.py
Safaa/src/safaa/pipeline_dir/data/: copyrights.csv
datasets/: README.md  false_positive_detection_dataset.csv
scripts/: fetch_copyrights.py  train_and_release.py
utility/NER/: data_conversion.py
utility/false_positive_detection/: test.py  train.py
utility/retraining/: README.md  requirements.txt  script_for_copyrights.py  utility_scripts.py
utility/retraining/data/: copyrights_07_13_2025.csv
utility/retraining/model/declutter_model/: config.cfg
utility/retraining/model/entity_recognizer/: config.cfg
